added links to other pages

--- a/index.html
+++ b/index.html
@@ -44,67 +44,92 @@
     <main>
       <section>
         <h2>Asia</h2>
-        <article>
-          <img src="images/IndiaGoldenTemple.jpg" alt="Golden Temple in India">
-          <h3>India</h3> 
-        </article>
+        <a href="countries/India/index.html">
+          <article>
+            <img src="images/IndiaGoldenTemple.jpg" alt="Golden Temple in India">
+            <h3>India</h3> 
+          </article>
+        </a>
       </section>
       <section>
         <h2>Americas</h2>
-        <article>
-          <img src="images/ArgentinaLaBoca.jpg" alt="La Boca Neighborhood in Buenos Aires">
-          <h3>Argentina</h3>
-        </article>
-        <article>
-          <img src="images/CanadaVancouverSkyline.jpg" alt="Vancouver Skyline">
-          <h3>Canada</h3>
-        </article>
-        <article>
-          <img src="images/UruguayPlazaIndependencia.jpg" alt="Plaza Independencia in Montevideo, Uruguay">
-          <h3>Uruguay</h3>
-        </article>
+        <a href="countries/Argentina/index.html">
+          <article>
+            <img src="images/ArgentinaLaBoca.jpg" alt="La Boca Neighborhood in Buenos Aires">
+            <h3>Argentina</h3>
+          </article>
+        </a>
+        <a href="countries/Canada/index.html">
+          <article>
+            <img src="images/CanadaVancouverSkyline.jpg" alt="Vancouver Skyline">
+            <h3>Canada</h3>
+          </article>
+        </a>
+        <a href="countries/Uruguay/index.html">
+          <article>
+            <img src="images/UruguayPlazaIndependencia.jpg" alt="Plaza Independencia in Montevideo, Uruguay">
+            <h3>Uruguay</h3>
+          </article>
+        </a>
       </section>
       <section>
         <h2>Europe (yes, I'm including the UK)</h2>
-        <article>
-          <img src="images/FranceEiffel.jpeg" alt="Eiffel Tower">
-          <h3>France</h3>
-        </article>
-        <article>
-          <img src="images/GermanyBrandenburgGate.jpeg" alt="Brandenburg Gate in Berlin">
-          <h3>Germany</h3>
-        </article> 
-        <article>
-          <img src="images/GreeceAcropolis1.jpg" alt="Image of Acropolis in Rhodes, Greece">
-          <h3>Greece</h3>
-        </article>
-        <article>
-          <img src="images/IrelandGuiness.jpg" alt="Image of Guinness factory in Dublin">
-          <h3>Ireland</h3>
-        </article>
-        <article>
-         <img src="images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
-         <h3>Italy</h3>
-        </article>
-        <article>
-          <img src="NetherlandsKinderdijk.jpg" alt="Windmills of Kinderdijk, in Holland">
-          <h3>The Netherlands</h3>
-        </article> 
-        <article>
-          <img src="SpainSagradaFamilia1.jpg" alt="Sagrada Familia in Barcelona">
-          <h3>Spain</h3>
-        </article>
-        <article>
-          <img src="UKTowerBridge.jpg" alt="Tower Bridge in London">
-          <h3>United Kingdom</h3>
-        </article> 
-      </section 
+        <a href="countries/France/index.html">
+          <article>
+            <img src="images/FranceEiffel.jpeg" alt="Eiffel Tower">
+            <h3>France</h3>
+          </article>
+        </a>
+        <a href="countries/Germany/index.html">
+          <article>
+            <img src="images/GermanyBrandenburgGate.jpeg" alt="Brandenburg Gate in Berlin">
+            <h3>Germany</h3>
+          </article> 
+        </a>
+        <a href="countries/Greece/index.html">
+          <article>
+            <img src="images/GreeceAcropolis1.jpg" alt="Image of Acropolis in Rhodes, Greece">
+            <h3>Greece</h3>
+          </article>
+        </a>
+        <a href="countries/Ireland/index.html">
+          <article>
+            <img src="images/IrelandGuiness.jpg" alt="Image of Guinness factory in Dublin">
+            <h3>Ireland</h3>
+          </article>
+        </a>
+        <a href="countries/Italy/index.html">
+          <article>
+            <img src="images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
+          <h3>Italy</h3>
+          </article>
+        </a>
+        <a href="countries/Netherlands/index.html">
+          <article>
+            <img src="NetherlandsKinderdijk.jpg" alt="Windmills of Kinderdijk, in Holland">
+            <h3>The Netherlands</h3>
+          </article> 
+        <a href="countries/Spain/index.html">
+          <article>
+            <img src="SpainSagradaFamilia1.jpg" alt="Sagrada Familia in Barcelona">
+            <h3>Spain</h3>
+          </article>
+        </a>
+        <a href="countries/UnitedKingdom/index.html">
+          <article>
+            <img src="UKTowerBridge.jpg" alt="Tower Bridge in London">
+            <h3>United Kingdom</h3>
+          </article>
+        </a> 
+      </section>
       <section>
         <h2>Northern Africa</h2>
-        <article>
-          <img src="images/EgyptPyramid.jpg" alt="Pyramids of Giza">
-          <h3>Egypt</h3>
-        </article>
+        <a href="countries/Egypt/index.html">
+          <article>
+            <img src="images/EgyptPyramid.jpg" alt="Pyramids of Giza">
+            <h3>Egypt</h3>
+          </article>
+        </a>
       </section> 
     </main> 
     <footer>
