--- a/countries/Argentina/index.html
+++ b/countries/Argentina/index.html
@@ -9,6 +9,15 @@
     </header>  
     <main>
       <article>
+        <p>I visited Argentina with a friend who has family in Buenos Aires. My friend's cousin lives in an apartment in the Caballito neighborhood,
+          right next to the Parque Centenario. Since we went in October, it was spring in Argentina and lots of people would sit on the grass
+          in the park and drink matte. 
+          Our first few days in Buenos Aires centered on getting to know the lay of the land. We visited many neighborhoods, like Microcentro, Recoleta,
+          and La Boca. The city is gorgeous and has Jacaranda trees all over the place. La Boca has the colorful Caminito, Microcentro has numerous buildings 
+          of note, like Casa Rosada (housing the office of the President), and Recoleta has not only an awesome museum of waterworks (Palacio de las Aguas)
+          but also the famous Recoleta cemetary, with mausoleums for such famous people as Eva Peron!
+          Our last few days in Argentina were spent basking in sun at El Tigre (where I also gorged on steak and fries) and visiting El Ateneo, the massive bookshop in
+          Buenos Aires. I made sure to buy a few books so I could brag I had shopped there. 
         <img src="../..images/ArgentinaCasaRosada.jpg" alt="Casa Rosada, Buenos Aires">
         <img src="../..images/ArgentinaElAteneo.jpg" alt="El Ateneo bookstore, Buenos Aires">
         <img src="../../images/ArgentinaElTigre.jpg" alt="A typical El Tigre home">
