--- a/countries/Argentina/index.html
+++ b/countries/Argentina/index.html
@@ -17,7 +17,7 @@
           of note, like Casa Rosada (housing the office of the President), and Recoleta has not only an awesome museum of waterworks (Palacio de las Aguas)
           but also the famous Recoleta cemetary, with mausoleums for such famous people as Eva Peron!
           Our last few days in Argentina were spent basking in sun at El Tigre (where I also gorged on steak and fries) and visiting El Ateneo, the massive bookshop in
-          Buenos Aires. I made sure to buy a few books so I could brag I had shopped there. 
+          Buenos Aires. I made sure to buy a few books so I could brag I had shopped there.</p>
         <img src="../..images/ArgentinaCasaRosada.jpg" alt="Casa Rosada, Buenos Aires">
         <img src="../..images/ArgentinaElAteneo.jpg" alt="El Ateneo bookstore, Buenos Aires">
         <img src="../../images/ArgentinaElTigre.jpg" alt="A typical El Tigre home">
