--- a/countries/Egypt/index.html
+++ b/countries/Egypt/index.html
@@ -9,6 +9,20 @@
     </header>  
     <main>
       <article>
+        <p>Egypt was a destination I had been dying to visit for many, many years. My childhood friend is 
+        Egytian and has family in Alexandria, so we'd grown up discussing this trip and were excited when 
+        we were finally able to do it together. 
+        Our first few days were spent in Luxor, visiting ancient sites like the Hatshepsut and Karnak temples,
+        and befriending locals. My friend, for example, befriended a local boatman who took us out onto the Nile 
+        and helped us get tickets for a hot air balloon tour (which allowed us to see Hatshepsut from above)! After 
+        Luxor, we spent time with my friend's family in Alexandria. The family was incredibly sweet and hospitable. 
+        They took us around all over, including to the Citadel of Qaitbay, the Alexandrian library, and to get tea
+        by the sea! 
+        We spent our final days in Cairo and visting the Pyramids of Giza. We visited a bunch of sites in Cairo,
+        including Tahrir Square, which has the Egyptian Museum nearby. Most memorable for me was the Mosque of Muhammad Ali 
+        in the Saladin Citadel. The Pyramids of Giza were as impressive as I imagined they would be. I rode a camel to get
+        there and it was honestly dreamlike. We also got to see the Sphinx, which was smaller than I thought it be but impressive
+        nonetheless.</p>
         <img src="../..images/EgyptAlexandria.jpg" alt="Alexandria coastline">
         <img src="../..images/EgyptBalloon.jpg" alt="Hot air balloon over Hatshepsut Temple, Luxor">
         <img src="../../images/EgyptKarnak.jpg" alt="Karnak Temple, Luxor">
