--- a/countries/Greece/index.html
+++ b/countries/Greece/index.html
@@ -9,11 +9,21 @@
     </header>  
     <main>
       <article>
+        <p>I went to Greece while I was studying abroad in Italy. I went on my own to the island of
+          Rhodes. I have to be honest - I did it wrong. I went by myself to a little island with not 
+          enough books on me and booked myself in a room with a broken TV. So, after I had seen everything
+          there was to see in about 2 days, I spent the next 3 bored out of my mind. Still, I'm glad I went
+          and had the experience. After all, I learned how to not travel!  
+          I visited the Old Town neighborhood, which had the really cool Palace of the Grand Master of the 
+          Knights of Rhodes and the really old Turkish mosque known as the Suleymaniye Mosque. My other adventures
+          in Rhodes led me to the Acropolis  and to a really small aquarium at the tip of the island. The aquarium 
+          was actually pretty cute. It was a pretty little island, but I hope to see more of Greece in the future (gotta
+          go to Athens!). </p>
         <img src="../..images/GreeceAcropolis1.jpg" alt="Acropolis on island of Rhodes">
         <img src="../..images/GreeceAcropolis2.jpg" alt="Acropolis on island of Rhodes">
         <img src="../../images/GreeceMills.jpg" alt="Classic windmills, Rhodes">
         <img src="../../images/GreeceMosque.jpg" alt="Mosque in old town of Rhodes">
-        <img src="../../images/GreecePalace.jpg" alt="Palace of the Grand Master of the Knighs of Rhodes">
+        <img src="../../images/GreecePalace.jpg" alt="Palace of the Grand Master of the Knights of Rhodes">
       </article>
     </main> 
     <footer>
