--- a/countries/Spain/index.html
+++ b/countries/Spain/index.html
@@ -9,6 +9,12 @@
     </header>  
     <main>
       <article>
+        <p> I went to Barcelona with a bunch of people I didn't know very well, but it was still fun. We spent the first day
+          getting aclimated and walking around the Arc de Triomf. We ate a lot of tapas and also experienced the nightlife, which 
+          was timed a little too late for my taste (I'm a grandma). My favorite parts were whenever we visited the architecure of
+          Antoni Gaudi, who I just think is crazy and out there - in a good way. The inside of Sagrada Familia is unlike anything I've
+          ever seen and I was taken aback to learn it has been under construction since it first started in 1882. I also greatly 
+          enjoyed visited Casa Mila and wish I could live there! One can only dream. </p>
         <img src="../..images/SpainArcdeTriomf.jpg" alt="Arc de Triomf, Barcelona">
         <img src="../..images/SpainCasaMila.jpg" alt="Casa Mila, Barcelona">
         <img src="../../images/SpainSagradaFamilia1.jpg" alt="Sagrada Familia, Barcelona">
