--- a/countries/Uruguay/index.html
+++ b/countries/Uruguay/index.html
@@ -9,6 +9,12 @@
     </header>  
     <main>
       <article>
+        <p> We went to Uruguay when we went to Argentina, since they border each other. Uruguay may be small,
+          but it was really interesting. We visited Colonia del Sacramento, an ancient village, and Montevideo, 
+          the capital. Colonia del Sacramento had a bunch of buildings that were unlike anything I'd seen before - 
+          even the benches in Colonia were interesting! Calle de los Suspiros attracted a lot of tourists and I 
+          could see why - there was something romantic about it! In Montevideo, we walking all over the place and
+          checked out Plaza Independencia. All in all, a nice place to visit! </p> 
         <img src="../..images/UruguayBench.jpg" alt="Cool bench in Colonia del Sacramento">
         <img src="../..images/UruguayCalledelosSuspiros.jpg" alt="Calle de los Suspiros, Colonia del Sacramento">
         <img src="../../images/UruguayColoniadelSacramento.jpg" alt="Another view of Colonia del Sacramento">
