--- a/countries/Italy/index.html
+++ b/countries/Italy/index.html
@@ -9,6 +9,17 @@
     </header>  
     <main>
       <article>
+        <p> I studied abroad in Italy and even learned Italian pretty well! I have unfortunately forgetten much of it. 
+          I studied at the University of Florence and stayed with a sweet Italian family. The best way to take in Florence was
+          to go to the top of the Piazzale Michelangelo, which is positioned high above the whole city and which we visited
+          early in our stay. From there, you can see the Duomo (which is in a dense, intricate area with one of the best pizza shops I have 
+          ever come across) and Ponte Vecchio. Ponte Vecchio was really hard to visit because I wanted to buy so many things! For most of
+          my stay in Italy, however, I spent the bulk of my money on pizza and gelato. 
+          Aside from Florence, we got to visit a bunch of other places. I went to the Tuscan countryside and got tipsy at a wine tasting. 
+          I visited Venice, which was the city that first got me interested in Italy to begin with. I bought a really cool Carnevale mask,
+          the Plague Doctor model. I also went to Pisa a few times, as it had an airport Ryanair used for its flights, and I checked out
+          Rome, though only for a day! At least I got to see the Colosseum, which was both eerie and majestic. I still need to go back to
+          Italy, however, as I never did make it to Milan or Sicily. </p>
         <img src="../..images/ItalyColosseum.jpg" alt="Colosseum, Rome">
         <img src="../..images/ItalyDuomo.jpg" alt="Duomo of Florence, Piazzale Michelangelo">
         <img src="../../images/ItalyPiazzaleCat.jpg" alt="Cat on steps, Piazzale Michelangelo">
