--- a/countries/The Netherlands/index.html
+++ b/countries/The Netherlands/index.html
@@ -8,6 +8,11 @@
     <header>
     </header>  
     <main>
+      <p>I went to the Netherlands right after my trip to Berlin. I went with the same friend who was with me in Berlin,
+        and we both liked Amsterdam better. Our first few days were spent walking around Amsterdam and eating a lot of 
+        stroopwafel. The canals were gorgeous at night. Dam Plaza was fun to visit, especially since we went shopping at 
+        De Bijenkorf. We honeslty just walked around and had <em>ahem</em> fun. Other than Amsterdam, the windmills of Kinderdijk 
+        was another one of our destinations and it was really a cute trip! </p>
       <article>
         <img src="../..images/NetherlandsCanals.jpg" alt="Canals of Amsterdam">
         <img src="../..images/NetherlandsDamPlaza.jpg" alt="Dam Plaza, Amsterdam">
