extensive work on homepage

--- a/countries/Italy/index.html
+++ b/countries/Italy/index.html
@@ -20,8 +20,8 @@
           the Plague Doctor model. I also went to Pisa a few times, as it had an airport Ryanair used for its flights, and I checked out
           Rome, though only for a day! At least I got to see the Colosseum, which was both eerie and majestic. I still need to go back to
           Italy, however, as I never did make it to Milan or Sicily. </p>
-        <img src="../..images/ItalyColosseum.jpg" alt="Colosseum, Rome">
-        <img src="../..images/ItalyDuomo.jpg" alt="Duomo of Florence, Piazzale Michelangelo">
+        <img src="../../images/ItalyColosseum.jpg" alt="Colosseum, Rome">
+        <img src="../../images/ItalyDuomo.jpg" alt="Duomo of Florence, Piazzale Michelangelo">
         <img src="../../images/ItalyPiazzaleCat.jpg" alt="Cat on steps, Piazzale Michelangelo">
         <img src="../../images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
         <img src="../../images/ItalyPonteVecchio.jpg" alt="Ponte Vecchio, Florence">
