--- a/index.html
+++ b/index.html
@@ -3,140 +3,217 @@
   <head>
     <title>Home|My Travels</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/css/bootstrap.css">
+    <link rel="stylesheet" href="css/css/main.css"> 
   </head>
   <body>
-    <header>
-      <h1>My Travels</h1>
-      <ul>
-        <li><a href="About/index.html">About</a></li>
-        <li><a href="Contact/index.html">Contact</a></li>
-      </ul> 
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
     </header> 
-    <aside>
-      <h3>Hey! Here are some places I look forward to visiting in the future.</h1>
-      <ul>
-        <li>
-          <img src="images/Cambodia.jpeg" alt="Wat Temple in Angkor">
-          <h3>Cambodia></h3>
-          <p>I have always had a fascination with Cambodia, and I would love to see the Wat Temple in Angkor.</p>
-        </li>
-        <li>
-          <img src="images/Iceland.jpg" alt="Blue Lagoon in Iceland">
-          <h3>Iceland</h3>
-          <p>I had an opportunity to go to Iceland once, but I missed it. I can't wait to cross it off the list!</p>
-        </li>
-        <li>
-          <img src="images/Russia.jpg" alt="Red Square in Moscow">
-          <h3>Russia</h3>
-          <p>I learned so much about Russia in college, I would love to actually go there.</p>
-        </li>
-        <li>
-          <img src="images/SouthKorea.jpeg" alt="Seoul, capital of South Korea">
-          <h3>South Korea</h3>
-          <p>I desperately want to go to Seoul and buy lots of cute things.</p>
-        </li>
-        <li>
-          <img src="images/Turkey.jpg" alt="Hagia Sophia">
-          <h3>Turkey</h3>
-          <p>I want to meet all the cats in Turkey and feast my eyes on the beautiful architecture.</p> 
-        </li>
-    </aside> 
+    <!--<aside>
+      <div id="wrapper"> 
+        <div id="sidebar-wrapper">
+          <h3>Hey! Here are some places I look forward to visiting in the future.</h3>
+          <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+              <img src="images/Cambodia.jpg" alt="Wat Temple in Angkor">
+              <h5>Cambodia</h5>
+              <p>I have always had a fascination with Cambodia, and I would love to 
+                see the Wat Temple in Angkor.</p>
+            </li>
+            <li>
+              <img src="images/Iceland.jpg" alt="Blue Lagoon in Iceland">
+              <h5>Iceland</h5>
+              <p>I had an opportunity to go to Iceland once, but I missed it. I can't wait to 
+                cross it off the list!</p>
+            </li>
+            <li>
+              <img src="images/Russia.jpg" alt="Red Square in Moscow">
+              <h5>Russia</h5>
+              <p>I learned so much about Russia in college, I would love to actually go there.</p>
+            </li>
+            <li>
+              <img src="images/SouthKorea.jpg" alt="Seoul, capital of South Korea">
+              <h5>South Korea</h5>
+              <p>I desperately want to go to Seoul and buy lots of cute things.</p>
+            </li>
+            <li>
+              <img src="images/Turkey.jpg" alt="Hagia Sophia">
+              <h5>Turkey</h5>
+              <p>I want to meet all the cats in Turkey and feast my eyes on the beautiful 
+                architecture.</p> 
+            </li>
+          </ul>
+        </div>
+      </div>
+    </aside>-->
     <main>
-      <section>
-        <h2>Asia</h2>
-        <a href="countries/India/index.html">
-          <article>
-            <img src="images/IndiaGoldenTemple.jpg" alt="Golden Temple in India">
-            <h3>India</h3> 
-          </article>
-        </a>
-      </section>
-      <section>
-        <h2>Americas</h2>
-        <a href="countries/Argentina/index.html">
-          <article>
-            <img src="images/ArgentinaLaBoca.jpg" alt="La Boca Neighborhood in Buenos Aires">
-            <h3>Argentina</h3>
-          </article>
-        </a>
-        <a href="countries/Canada/index.html">
-          <article>
-            <img src="images/CanadaVancouverSkyline.jpg" alt="Vancouver Skyline">
-            <h3>Canada</h3>
-          </article>
-        </a>
-        <a href="countries/Uruguay/index.html">
-          <article>
-            <img src="images/UruguayPlazaIndependencia.jpg" alt="Plaza Independencia in Montevideo, Uruguay">
-            <h3>Uruguay</h3>
-          </article>
-        </a>
-      </section>
-      <section>
-        <h2>Europe (yes, I'm including the UK)</h2>
-        <a href="countries/France/index.html">
-          <article>
-            <img src="images/FranceEiffel.jpeg" alt="Eiffel Tower">
-            <h3>France</h3>
-          </article>
-        </a>
-        <a href="countries/Germany/index.html">
-          <article>
-            <img src="images/GermanyBrandenburgGate.jpeg" alt="Brandenburg Gate in Berlin">
-            <h3>Germany</h3>
-          </article> 
-        </a>
-        <a href="countries/Greece/index.html">
-          <article>
-            <img src="images/GreeceAcropolis1.jpg" alt="Image of Acropolis in Rhodes, Greece">
-            <h3>Greece</h3>
-          </article>
-        </a>
-        <a href="countries/Ireland/index.html">
-          <article>
-            <img src="images/IrelandGuiness.jpg" alt="Image of Guinness factory in Dublin">
-            <h3>Ireland</h3>
-          </article>
-        </a>
-        <a href="countries/Italy/index.html">
-          <article>
-            <img src="images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
-          <h3>Italy</h3>
-          </article>
-        </a>
-        <a href="countries/Netherlands/index.html">
-          <article>
-            <img src="NetherlandsKinderdijk.jpg" alt="Windmills of Kinderdijk, in Holland">
-            <h3>The Netherlands</h3>
-          </article> 
-        <a href="countries/Spain/index.html">
-          <article>
-            <img src="SpainSagradaFamilia1.jpg" alt="Sagrada Familia in Barcelona">
-            <h3>Spain</h3>
-          </article>
-        </a>
-        <a href="countries/UnitedKingdom/index.html">
-          <article>
-            <img src="UKTowerBridge.jpg" alt="Tower Bridge in London">
-            <h3>United Kingdom</h3>
-          </article>
-        </a> 
-      </section>
-      <section>
-        <h2>Northern Africa</h2>
-        <a href="countries/Egypt/index.html">
-          <article>
-            <img src="images/EgyptPyramid.jpg" alt="Pyramids of Giza">
-            <h3>Egypt</h3>
-          </article>
-        </a>
-      </section> 
+      <div class="container">
+        <section>
+          <div class="row">
+            <div class="col-md-12">
+              <h2>Asia</h2>
+            </div>
+          </div>
+          <div class="row"> 
+            <article> 
+              <div class="col-md-4">
+                <a href="countries/India/index.html">
+                  <img src="images/IndiaGoldenTemple.jpeg" width="300" height="300" alt="Golden Temple in India">
+                  <h3>India</h3> 
+                </a>
+              </div>
+            </article>
+          </div> 
+        </section>
+        <section>
+          <div class="row">
+            <div class="col-md-12">
+              <h2>Americas</h2>
+            </div>
+          </div>
+          <div class="row">
+            <article> 
+              <div class="col-md-4">
+                <a href="countries/Argentina/index.html">
+                  <img src="images/ArgentinaLaBoca.jpg" width="300" height="300" alt="La Boca Neighborhood in Buenos Aires">
+                  <h3>Argentina</h3>
+                </a>
+              </div> 
+            </article> 
+            <article>
+              <div class="col-md-4"> 
+                <a href="countries/Canada/index.html">
+                  <img src="images/CanadaVancouverSkyline.jpg" width="300" height="300" alt="Vancouver Skyline">
+                  <h3>Canada</h3>
+                </a>
+              </div>
+            </article>
+            <article>
+              <div class="col-md-4">
+                <a href="countries/Uruguay/index.html">
+                  <img src="images/UruguayPlazaIndependencia.jpg" width="300" height="300" alt="Plaza Independencia in Montevideo, Uruguay">
+                  <h3>Uruguay</h3>
+                </a>
+              </div> 
+            </article>
+          </div> 
+        </section>
+        <section>
+          <div class="row">
+            <div class="col-md-12"> 
+              <h2>Europe (yes, I'm including the UK)</h2>
+            </div>
+          </div>
+          <div class="row">
+            <article>
+              <div class="col-md-4">
+                <a href="countries/France/index.html">
+                  <img src="images/FranceEiffel.jpeg" width="300" height="300" alt="Eiffel Tower">
+                  <h3>France</h3>
+                </a>
+              </div>  
+            </article>
+            <article>
+              <div class="col-md-4">  
+                <a href="countries/Germany/index.html">
+                  <img src="images/GermanyBrandenburgGate.jpg" width="300" height="300" alt="Brandenburg Gate in Berlin">
+                  <h3>Germany</h3>
+                </a>
+              </div>
+            </article>
+            <article>  
+              <div class="col-md-4"> 
+                <a href="countries/Greece/index.html">
+                  <img src="images/GreeceAcropolis1.jpg" width="300" height="300" alt="Image of Acropolis in Rhodes, Greece">
+                  <h3>Greece</h3>
+                </a>
+              </div>
+            <article>
+          </div> 
+          <div class="row"> 
+            <article>
+              <div class="col-md-4">     
+                <a href="countries/Ireland/index.html">
+                  <img src="images/IrelandGuinness.jpg" width="300" height="300" alt="Image of Guinness factory in Dublin">
+                  <h3>Ireland</h3>
+                </a>
+              </div>
+            </article>  
+            <article> 
+              <div class="col-md-4">
+                <a href="countries/Italy/index.html">
+                  <img src="images/ItalyPisa.jpg" width="300" height="300" alt="Leaning tower of Pisa">
+                  <h3>Italy</h3>
+                </a>
+              </div>
+            </article>
+            <article>   
+              <div class="col-md-4"> 
+                <a href="countries/Netherlands/index.html">
+                  <img src="images/NetherlandsKinderdijk.jpg" width="300" height="300" alt="Windmills of Kinderdijk, in Holland">
+                  <h3>The Netherlands</h3>
+                </a>
+              </div>
+            </article>
+          </div>   
+          <div class="row"> 
+            <article>
+              <div class="col-md-4"> 
+                <a href="countries/Spain/index.html">
+                  <img src="images/SpainSagradaFamilia1.jpg" width="300" height="300" alt="Sagrada Familia in Barcelona">
+                  <h3>Spain</h3>
+                </a>
+              </div>
+            </article>
+            <article> 
+              <div class="col-md-4">   
+                <a href="countries/UnitedKingdom/index.html">
+                  <img src="images/UKTowerBridge.jpg" width="300" height="300" alt="Tower Bridge in London">
+                  <h3>United Kingdom</h3>
+                </a> 
+              </div>
+            </article> 
+          </div>  
+        </section>
+        <section>
+          <div class="row"> 
+            <div class="col-md-12">
+              <h2>Northern Africa</h2>
+            </div>
+          </div>
+          <div class="row">
+            <article>
+              <div class="col-md-4"> 
+                <a href="countries/Egypt/index.html">
+                  <img src="images/EgyptPyramid.jpg" width="300" height="300" alt="Pyramids of Giza">
+                  <h3>Egypt</h3>
+                </a>
+              </div>
+            </article>
+          </div>  
+        </section> 
+      </div>
     </main> 
-    <footer>
-      <ul>
-        <li><a href="About/index.html">About</a></li>
-        <li><a href="Contact/index.html">Contact</a></li>
-      </ul> 
-    </footer> 
+    <div class="footer">
+      <footer>
+        <div class="navbar navbar-static-bottom">
+          <ul>
+            <li><i class="glyphicon glyphicon-plus"></i></li>
+            <li><a href="About/index.html">About</a></li>
+            <li><i class="glyphicon glyphicon-envelope"></i></li>
+            <li><a href="Contact/index.html">Contact</a></li>
+          </ul> 
+        </div> 
+      </footer>
+    </div> 
   </body>
 </html> 
