edited styling on several pages

--- a/countries/Canada/index.html
+++ b/countries/Canada/index.html
@@ -1,29 +1,61 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Canada|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Canada|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
-    </header>  
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
+    </header>    
     <main>
-      <p>I have spent many summers in Canada, as I have extensive family there on both coasts. One of my earliest memories 
-        is of stepping onto the glass floor at CN Tower - I remember being frightened but also thrilled! When not in Toronto,
-        I was passing time in Vancouver. My grandparents lived nearby in Abbotsford, which was for all intents and purposes a 
-        mini-Punjab. Since it was a rural area near farmland, it was also pretty chill. Still, it was always nice to go back to 
-        family in Vancouver and get reconnected with the rest of the world! 
-        I would love to visit other parts of Canada, like Nova Scotia. I have been lucky enough to go to the Mont Tremblant resort
-        in Quebec, but I didn't get a chance to really explore Montreal, which we only drove through.. There is so much more I have 
-        yet to see!</p>
-      <article>
-        <img src="../..images/CanadaCNTower/jpg" alt="CN Tower, Toronto">
-        <img src="../..images/CanadaMontTremblant.jpg" alt="Mountains in Quebec, Mont Tremblant">
-        <img src="../../images/CanadaStanleyPark" alt="Totem Poles at Stanley Park, Vancouver">
-        <img src="../../images/CanadaVancouverSkyline.jpg" alt="Vancouver skyline">
-      </article>
+      <div class="container"> 
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Canada</h2> 
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-12"> 
+            <article class="CountryPages">
+              <img src="../../images/CanadaCNTower.jpeg" alt="CN Tower, Toronto">
+              <p>I have spent many summers in Canada, as I have extensive family there on both coasts. One of my earliest memories 
+                is of stepping onto the glass floor at CN Tower - I remember being frightened but also thrilled!</p> 
+              <div class="SidebySide">
+                <img src="../../images/CanadaStanleyPark.jpg" alt="Totem Poles at Stanley Park, Vancouver">
+                <img src="../../images/CanadaVancouverSkyline.jpg" alt="Vancouver skyline">
+              </div> 
+              <p>When not in Toronto, I was passing time in Vancouver. My grandparents lived nearby in Abbotsford, which was for all intents and purposes a 
+                mini-Punjab. Since it was a rural area near farmland, it was also pretty chill. Still, it was always nice to go back to 
+                family in Vancouver and get reconnected with the rest of the world!</p> 
+              <img src="../../images/CanadaMontTremblant.jpeg" alt="Mountains in Quebec, Mont Tremblant">
+              <p>I would love to visit other parts of Canada, like Nova Scotia. I have been lucky enough to go to the Mont Tremblant resort
+                in Quebec, but I didn't get a chance to really explore Montreal, which we only drove through.. There is so much more I have 
+                yet to see!</p>
+            </article>
+          </div>
+        </div> 
+      </div> 
     </main> 
     <footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
     </footer> 
   </body>
 </html> 
