--- a/countries/Egypt/index.html
+++ b/countries/Egypt/index.html
@@ -1,39 +1,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Egypt|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Egypt|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
     </header>  
     <main>
-      <article>
-        <p>Egypt was a destination I had been dying to visit for many, many years. My childhood friend is 
-        Egytian and has family in Alexandria, so we'd grown up discussing this trip and were excited when 
-        we were finally able to do it together. 
-        Our first few days were spent in Luxor, visiting ancient sites like the Hatshepsut and Karnak temples,
-        and befriending locals. My friend, for example, befriended a local boatman who took us out onto the Nile 
-        and helped us get tickets for a hot air balloon tour (which allowed us to see Hatshepsut from above)! After 
-        Luxor, we spent time with my friend's family in Alexandria. The family was incredibly sweet and hospitable. 
-        They took us around all over, including to the Citadel of Qaitbay, the Alexandrian library, and to get tea
-        by the sea! 
-        We spent our final days in Cairo and visting the Pyramids of Giza. We visited a bunch of sites in Cairo,
-        including Tahrir Square, which has the Egyptian Museum nearby. Most memorable for me was the Mosque of Muhammad Ali 
-        in the Saladin Citadel. The Pyramids of Giza were as impressive as I imagined they would be. I rode a camel to get
-        there and it was honestly dreamlike. We also got to see the Sphinx, which was smaller than I thought it be but impressive
-        nonetheless.</p>
-        <img src="../..images/EgyptAlexandria.jpg" alt="Alexandria coastline">
-        <img src="../..images/EgyptBalloon.jpg" alt="Hot air balloon over Hatshepsut Temple, Luxor">
-        <img src="../../images/EgyptKarnak.jpg" alt="Karnak Temple, Luxor">
-        <img src="../../images/EgyptMuhammadAli.jpg" alt="Muhammad Ali Mosque in Cairo">
-        <img src="../../images/EgyptMuseum.jpg" alt="Outside of the pink Egyptian Museum">
-        <img src="../../images/EgyptNile.jpg" alt="Boat on the Nile, Luxor">
-        <img src="../../images/EgyptPyramid.jpg" alt="Pyramids of Giza">
-        <img src="../../images/EgyptSphinx.jpg" alt="Sphinx of Giza"> 
-      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Egypt</h2> 
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-12">
+            <article class="CountryPages">
+              <p>Egypt was a destination I had been dying to visit for many, many years. My childhood friend is 
+                Egytian and has family in Alexandria, so we'd grown up discussing this trip and were excited when 
+                we were finally able to do it together. </p>
+              <div class="SidebySide"> 
+                <img src="../../images/EgyptKarnak.jpg" alt="Karnak Temple, Luxor">
+                <img src="../../images/EgyptNile.jpg" alt="Boat on the Nile, Luxor">
+                <img src="../../images/EgyptBalloon.jpg" alt="Hot air balloon over Hatshepsut Temple, Luxor">
+              </div> 
+              <p>Our first few days were spent in Luxor, visiting ancient sites like the Hatshepsut and Karnak temples,
+                and befriending locals. My friend, for example, befriended a local boatman who took us out onto the Nile 
+                and helped us get tickets for a hot air balloon tour (which allowed us to see Hatshepsut from above)!</p>
+            <img src="../../images/EgyptAlexandria.jpg" alt="Alexandria coastline">
+            <p>After Luxor, we spent time with my friend's family in Alexandria. The family was incredibly sweet and hospitable. 
+              They took us around all over, including to the Citadel of Qaitbay, the Alexandrian library, and to get tea
+              by the sea!</p> 
+            <div class="SidebySide"> 
+              <img src="../../images/EgyptMuhammadAli.jpg" alt="Muhammad Ali Mosque in Cairo">
+              <img src="../../images/EgyptMuseum.jpg" alt="Outside of the pink Egyptian Museum">
+            </div> 
+            <p>We spent our final days in Cairo and visting the Pyramids of Giza. We visited a bunch of sites in Cairo,
+              including Tahrir Square, which has the Egyptian Museum nearby. Most memorable for me was the Mosque of Muhammad Ali 
+              in the Saladin Citadel.</p> 
+            <div class="SidebySide">
+              <img src="../../images/EgyptPyramid.jpg" alt="Pyramids of Giza">
+              <img src="../../images/EgyptSphinx.jpg" alt="Sphinx of Giza"> 
+            </div> 
+            <p>The Pyramids of Giza were as impressive as I imagined they would be. I rode a camel to get
+              there and it was honestly dreamlike. We also got to see the Sphinx, which was smaller than I thought it be but impressive
+              nonetheless.</p>
+          </article>
+          </div>
+        </div> 
+      </div> 
     </main> 
     <footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
     </footer> 
   </body>
 </html> 
