--- a/countries/Argentina/index.html
+++ b/countries/Argentina/index.html
@@ -1,33 +1,68 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Argentina|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Argentina|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
     </header>  
     <main>
-      <article>
-        <p>I visited Argentina with a friend who has family in Buenos Aires. My friend's cousin lives in an apartment in the Caballito neighborhood,
-          right next to the Parque Centenario. Since we went in October, it was spring in Argentina and lots of people would sit on the grass
-          in the park and drink matte. 
-          Our first few days in Buenos Aires centered on getting to know the lay of the land. We visited many neighborhoods, like Microcentro, Recoleta,
-          and La Boca. The city is gorgeous and has Jacaranda trees all over the place. La Boca has the colorful Caminito, Microcentro has numerous buildings 
-          of note, like Casa Rosada (housing the office of the President), and Recoleta has not only an awesome museum of waterworks (Palacio de las Aguas)
-          but also the famous Recoleta cemetary, with mausoleums for such famous people as Eva Peron!
-          Our last few days in Argentina were spent basking in sun at El Tigre (where I also gorged on steak and fries) and visiting El Ateneo, the massive bookshop in
-          Buenos Aires. I made sure to buy a few books so I could brag I had shopped there.</p>
-        <img src="../../images/ArgentinaCasaRosada.jpg" alt="Casa Rosada, Buenos Aires">
-        <img src="../../images/ArgentinaElAteneo.jpg" alt="El Ateneo bookstore, Buenos Aires">
-        <img src="../../images/ArgentinaElTigre.jpg" alt="A typical El Tigre home">
-        <img src="../../images/ArgentinaJacaranda.jpg" alt="Jacaranda - tree with purple flowers">
-        <img src="../../images/ArgentinaLaBoca.jpg" alt="Colorful La Boca street, Buenos Aires">
-        <img src="../../images/ArgentinaParque.jpg" alt="Gorgeous Centenario Parque">
-        <img src="../../images/Recoleta.jpg" alt="La Recoleta - famous cemetery"> 
-      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Argentina</h2> 
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-12"> 
+            <article class="CountryPages">
+              <img src="../../images/ArgentinaParque.jpg" alt="Gorgeous Centenario Parque">
+              <p>I visited Argentina with a friend who has family in Buenos Aires. My friend's cousin lives in an apartment in the Caballito neighborhood,
+                right next to the Parque Centenario. Since we went in October, it was spring in Argentina and lots of people would sit on the grass
+                in the park and drink matte.</p>
+              <img src="../../images/ArgentinaJacaranda.jpg" alt="Jacaranda - tree with purple flowers">
+              <p>Our first few days in Buenos Aires centered on getting to know the lay of the land. We visited many neighborhoods, like Microcentro, Recoleta,
+                and La Boca. The city is gorgeous and has Jacaranda trees all over the place.</p> 
+              <div class="SidebySide">
+                <img src="../../images/ArgentinaLaBoca.jpg" alt="Colorful La Boca street, Buenos Aires">
+                <img src="../../images/ArgentinaCasaRosada.jpg" alt="Casa Rosada, Buenos Aires">
+                <img src="../../images/ArgentinaRecoleta.jpg" alt="La Recoleta - famous cemetery">
+              </div>   
+              <p>La Boca has the colorful Caminito, Microcentro has numerous buildings of note, like Casa Rosada (housing the office of the President), and 
+                Recoleta has not only an awesome museum of waterworks (Palacio de las Aguas) but also the famous Recoleta cemetary, with mausoleums for such famous
+                people as Eva Peron!</p> 
+              <div class="SidebySide">
+                <img src="../../images/ArgentinaElAteneo.jpg" alt="El Ateneo bookstore, Buenos Aires">
+                <img src="../../images/ArgentinaElTigre.jpg" alt="A typical El Tigre home">   
+              </div> 
+              <p>Our last few days in Argentina were spent basking in sun at El Tigre (where I also gorged on steak and fries) and visiting El Ateneo, the 
+                massive bookshop in Buenos Aires. I made sure to buy a few books so I could brag I had shopped there.</p> 
+            </article>
+          </div>
+        </div> 
+      </div>     
     </main> 
     <footer>
-    </footer> 
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
+    </footer>
   </body>
 </html> 
