rest of pages filled out

--- a/countries/Germany/index.html
+++ b/countries/Germany/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Germany|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Germany|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
     </header>  
     <main>
-      <article>
-        <p>I visited Berlin while I was working in France. My friend and I went in late December, so my memories
-          are marred by the most bitter cold I ever did experience. Still, I'm glad I went! It was definitely worth
-          it, especially to see the Berlin Wall in its modern state. I really liked that pieces of it were dispersed 
-          throughout the city. It was actually pretty moving to look at and reflect on. I felt similarly about the 
-          Holocaust Memorial, which was sobering to walk around in. 
-          One thing I remember most about my trip to Berlin is currywurst - I ate so much I thought I was going to be 
-          sick. I regret nothing! We ended up spending the New Year in BErlin, which was a little terrifying, given fireworks
-          are legal. People were setting them off every few seconds and I kept ducking, thinking I was getting shot at. Oh well! 
-          At least there had been a giant fair near the Brandenburg Gate a few days prior, so it made up for it retroactively.</p>
-        <img src="../..images/GermanyBrandenburgGate.jpeg" alt="Brandenburg Gate, Berlin">
-        <img src="../../images/GermanyCurrywurst.jpeg" alt="Currywurst - sausage with ketchup">
-        <img src="../../images/GermanyWall1.jpg" alt="Piece of Berlin wall">
-        <img src="../../images/GermanyWall2.jpg" alt="Berlin wall today">
-        <img src="../..images/GermanyHolocaustMemorial" alt="Berlin's Holocaust Museum'"
-      </article>
+      <div class="container"> 
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Germany</h2> 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <article class="CountryPages">
+              <div class="SidebySide">
+                <img src="../../images/GermanyWall1.jpg" alt="Piece of Berlin wall">
+                <img src="../../images/GermanyWall2.jpeg" alt="Berlin wall today">
+              </div> 
+              <p>I visited Berlin while I was working in France. My friend and I went in late December, so my memories
+                are marred by the most bitter cold I ever did experience. Still, I'm glad I went! It was definitely worth
+                it, especially to see the Berlin Wall in its modern state. I really liked that pieces of it were dispersed 
+                throughout the city. It was actually pretty moving to look at and reflect on.</p>
+              <img src="../../images/GermanyHolocaustMemorial.jpg" alt="Berlin's Holocaust Museum"> 
+              <p>I felt similarly about the Holocaust Memorial, which was sobering to walk around in.</p>
+              <img src="../../images/GermanyCurrywurst.jpg" alt="Currywurst - sausage with ketchup">
+              <p>One thing I remember most about my trip to Berlin is currywurst - I ate so much I thought I was going to be 
+                sick. I regret nothing!</p>
+              <img src="../../images/GermanyBrandenburgGate.jpg" alt="Brandenburg Gate, Berlin">
+              <p>We ended up spending the New Year in Berlin, which was a little terrifying, given fireworks
+                are legal. People were setting them off every few seconds and I kept ducking, thinking I was getting shot at. Oh well! 
+                At least there had been a giant fair near the Brandenburg Gate a few days prior, so it made up for it retroactively.</p>
+            </article>
+          </div>
+        </div> 
+      </div> 
     </main> 
     <footer>
-    </footer> 
+        <div class="navbar navbar-static-bottom">
+          <ul>
+            <li><i class="glyphicon glyphicon-plus"></i></li>
+            <li><a href="About/index.html">About</a></li>
+            <li><i class="glyphicon glyphicon-envelope"></i></li>
+            <li><a href="Contact/index.html">Contact</a></li>
+          </ul> 
+        </div> 
+      </footer>
   </body>
 </html> 
