--- a/countries/Greece/index.html
+++ b/countries/Greece/index.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Greece|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Greece|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
     </header>  
     <main>
-      <article>
-        <p>I went to Greece while I was studying abroad in Italy. I went on my own to the island of
-          Rhodes. I have to be honest - I did it wrong. I went by myself to a little island with not 
-          enough books on me and booked myself in a room with a broken TV. So, after I had seen everything
-          there was to see in about 2 days, I spent the next 3 bored out of my mind. Still, I'm glad I went
-          and had the experience. After all, I learned how to not travel!  
-          I visited the Old Town neighborhood, which had the really cool Palace of the Grand Master of the 
-          Knights of Rhodes and the really old Turkish mosque known as the Suleymaniye Mosque. My other adventures
-          in Rhodes led me to the Acropolis  and to a really small aquarium at the tip of the island. The aquarium 
-          was actually pretty cute. It was a pretty little island, but I hope to see more of Greece in the future (gotta
-          go to Athens!). </p>
-        <img src="../..images/GreeceAcropolis1.jpg" alt="Acropolis on island of Rhodes">
-        <img src="../..images/GreeceAcropolis2.jpg" alt="Acropolis on island of Rhodes">
-        <img src="../../images/GreeceMills.jpg" alt="Classic windmills, Rhodes">
-        <img src="../../images/GreeceMosque.jpg" alt="Mosque in old town of Rhodes">
-        <img src="../../images/GreecePalace.jpg" alt="Palace of the Grand Master of the Knights of Rhodes">
-      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Greece</h2> 
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-12">
+            <article class="CountryPages">
+              <img src="../../images/GreeceMills.jpg" alt="Classic windmills, Rhodes">
+              <p>I went to Greece while I was studying abroad in Italy. I went on my own to the island of
+                  Rhodes. I have to be honest - I did it wrong. I went by myself to a little island with not 
+                  enough books on me and booked myself in a room with a broken TV. So, after I had seen everything
+                  there was to see in about 2 days, I spent the next 3 bored out of my mind. Still, I'm glad I went
+                  and had the experience. After all, I learned how to not travel!</p> 
+              <div class="SidebySide">
+                <img src="../../images/GreeceMosque.jpg" alt="Mosque in old town of Rhodes">
+                <img src="../../images/GreecePalace.jpg" alt="Palace of the Grand Master of the Knights of Rhodes">
+              </div> 
+              <p>I visited the Old Town neighborhood, which had the really cool Palace of the Grand Master of the 
+                  Knights of Rhodes and the really old Turkish mosque known as the Suleymaniye Mosque.</p>
+              <div class="SidebySide">
+                <img src="../../images/GreeceAcropolis1.jpg" alt="Acropolis on island of Rhodes">
+                <img src="../../images/GreeceAcropolis2.jpg" alt="Acropolis on island of Rhodes">
+              </div> 
+              <p>My other adventures in Rhodes led me to the Acropolis  and to a really small aquarium at the tip of the island. 
+                The aquarium was actually pretty cute. It was a pretty little island, but I hope to see more of Greece in the future (gotta
+                go to Athens!).</p>
+            </article>
+          </div>
+        </div>
+      </div> 
     </main> 
     <footer>
-    </footer> 
+        <div class="navbar navbar-static-bottom">
+          <ul>
+            <li><i class="glyphicon glyphicon-plus"></i></li>
+            <li><a href="About/index.html">About</a></li>
+            <li><i class="glyphicon glyphicon-envelope"></i></li>
+            <li><a href="Contact/index.html">Contact</a></li>
+          </ul> 
+        </div> 
+      </footer>
   </body>
 </html> 
