--- a/countries/Ireland/index.html
+++ b/countries/Ireland/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Ireland|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Ireland|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
-    </header>  
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
+    </header> 
     <main>
-      <article>
-        <p>I went to Ireland while studying abroad in Italy. I mostly stayed in Dublin, venturing out to see
-          Howth. Dublin honestly has some of the nicest people I have ever met. People would randomly wave at me,
-          which was confusing at first. It was really fun to vist the Guinness Factory and get tipsy in the middle
-          of the day. It was also really fun to do a pub crawl and meet other tourists enjoying the city. Though I 
-          also got to visit Dublin Spire and Kilmainham Gaol (which was interesting as it was depressing), St. Stephen's
-          Green was the site that really left an impression on me. It was just so pretty, with huge swan that people could 
-          feed! I also really like Howth, which I found to be beautiful. I really wish I could have seen more of the Irish
-          coast, but I guess I will just have to go back some day! </p> 
-        <img src="../../images/IrelandDublinSpire.jpg" alt="Dublin Spire">
-        <img src="../images/IrelandGaol.jpg" alt="Kilmainham Gaol staircase">
-        <img src="../images/IrelandGuinness.jpg" alt="Guinness Factory">
-        <img src="../images/IrelandHowth1.jpg" alt="Coastline, Howth">
-        <img src="../images/IrelandHowth2.jpg" alt="Coastline, Howth">
-        <img src="../images/IrelandStStephens.jpg" alt="Feeding Swan, St. Stephens Green">
-      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Ireland</h2> 
+          </div>
+        </div>
+        <article class="CountryPages">
+          <div class="row">
+            <div class="col-md-12">
+              <img src="../../images/IrelandGuinness.jpg" alt="Guinness Factory">
+              <p>I went to Ireland while studying abroad in Italy. I mostly stayed in Dublin, venturing out to see
+                Howth. Dublin honestly has some of the nicest people I have ever met. People would randomly wave at me,
+                which was confusing at first. It was really fun to vist the Guinness Factory and get tipsy in the middle
+                of the day. It was also really fun to do a pub crawl and meet other tourists enjoying the city.</p> 
+              <div class="SidebySide">
+                <img src="../../images/IrelandStStephens.jpg" alt="Feeding Swan, St. Stephens Green">
+                <img src="../../images/IrelandGaol.jpeg" alt="Kilmainham Gaol staircase">
+              </div> 
+              <p>Though I also got to visit Dublin Spire and Kilmainham Gaol (which was interesting as it was depressing), 
+                St. Stephen's Green was the site that really left an impression on me. It was just so pretty, with huge 
+                swan that people could feed! </p> 
+              <div class="SidebySide">
+                <img src="../../images/IrelandHowth1.jpg" alt="Coastline, Howth">
+                <img src="../../images/IrelandHowth2.jpg" alt="Coastline, Howth">
+              </div> 
+              <p> I also really liked Howth, which I found to be beautiful. I really wish I could have seen more of the Irish
+                coast, but I guess I will just have to go back some day! </p> 
+            </div>
+          </div> 
+        </article>
+      </div> 
     </main> 
     <footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
     </footer> 
   </body>
 </html> 
