--- a/countries/Italy/index.html
+++ b/countries/Italy/index.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Italy|My Travels</title>
-      <meta charset="UTF-8">
+    <title>Italy|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-    <header>
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
     </header>  
     <main>
-      <article>
-        <p> I studied abroad in Italy and even learned Italian pretty well! I have unfortunately forgetten much of it. 
-          I studied at the University of Florence and stayed with a sweet Italian family. The best way to take in Florence was
-          to go to the top of the Piazzale Michelangelo, which is positioned high above the whole city and which we visited
-          early in our stay. From there, you can see the Duomo (which is in a dense, intricate area with one of the best pizza shops I have 
-          ever come across) and Ponte Vecchio. Ponte Vecchio was really hard to visit because I wanted to buy so many things! For most of
-          my stay in Italy, however, I spent the bulk of my money on pizza and gelato. 
-          Aside from Florence, we got to visit a bunch of other places. I went to the Tuscan countryside and got tipsy at a wine tasting. 
-          I visited Venice, which was the city that first got me interested in Italy to begin with. I bought a really cool Carnevale mask,
-          the Plague Doctor model. I also went to Pisa a few times, as it had an airport Ryanair used for its flights, and I checked out
-          Rome, though only for a day! At least I got to see the Colosseum, which was both eerie and majestic. I still need to go back to
-          Italy, however, as I never did make it to Milan or Sicily. </p>
-        <img src="../../images/ItalyColosseum.jpg" alt="Colosseum, Rome">
-        <img src="../../images/ItalyDuomo.jpg" alt="Duomo of Florence, Piazzale Michelangelo">
-        <img src="../../images/ItalyPiazzaleCat.jpg" alt="Cat on steps, Piazzale Michelangelo">
-        <img src="../../images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
-        <img src="../../images/ItalyPonteVecchio.jpg" alt="Ponte Vecchio, Florence">
-        <img src="../../images/ItalyTuscany.jpg" alt="Tuscan countryside">
-        <img src="../../images/ItalyVenice.jpg" alt="Venice">
-      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>Italy</h2> 
+          </div>
+        </div> 
+        <article class="CountryPages">
+          <div class="row">
+            <div class="col-md-12">
+              <img src="../../images/ItalyPiazzaleCat.jpg" alt="Cat on steps, Piazzale Michelangelo">
+              <p> I studied abroad in Italy and even learned Italian pretty well! I have unfortunately forgetten much of it. 
+                I studied at the University of Florence and stayed with a sweet Italian family. The best way to take in Florence was
+                to go to the top of the Piazzale Michelangelo, which is positioned high above the whole city and which we visited
+                early in our stay.</p> 
+              <div class="SidebySide">
+                <img src="../../images/ItalyDuomo.jpg" alt="Duomo of Florence, Piazzale Michelangelo">
+                <img src="../../images/ItalyPonteVecchio.jpg" alt="Ponte Vecchio, Florence">
+              </div> 
+              <p>From there, you can see the Duomo (which is in a dense, intricate area with one of the best pizza shops I have 
+                ever come across) and Ponte Vecchio. Ponte Vecchio was really hard to visit because I wanted to buy so many things! For most of
+                my stay in Italy, however, I spent the bulk of my money on pizza and gelato.</p> 
+              <img src="../../images/ItalyTuscany.jpg" alt="Tuscan countryside">
+              <p>Aside from Florence, we got to visit a bunch of other places. I went to the Tuscan countryside and got tipsy at a wine tasting.</p>
+              <img src="../../images/ItalyVenice.jpg" alt="Venice">
+              <p>I visited Venice, which was the city that first got me interested in Italy to begin with. I bought a really cool Carnevale mask,
+                the Plague Doctor model. </p>
+              <div class="SidebySide">
+                <img src="../../images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
+                <img src="../../images/ItalyColosseum.jpg" alt="Colosseum, Rome">
+              </div> 
+              <p>I also went to Pisa a few times, as it had an airport Ryanair used for its flights, and I checked out
+                  Rome, though only for a day! At least I got to see the Colosseum, which was both eerie and majestic. I still need to go back to
+                  Italy, however, as I never did make it to Milan or Sicily.</p>
+            </div>
+          </div>  
+        </article>
+      </div> 
     </main> 
     <footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
     </footer> 
   </body>
 </html> 
